--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.2.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.3",
+    "prettier-plugin-solidity": "^1.0.0-beta.5",
+    "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
@@ -45,6 +46,7 @@
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.ts",
     "postdeploy": "hardhat run scripts/publish.ts",
+    "coverage": "hardhat coverage --network coverage --temp artifacts",
     "watch": "node scripts/watch.js",
     "accounts": "hardhat accounts",
     "balance": "hardhat balance",
