--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -14,6 +14,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "hardhat-deploy": "^0.7.0-beta.46",
+    "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "solidity-coverage": "^0.7.16",
@@ -42,7 +44,8 @@
   "scripts": {
     "chain": "hardhat node",
     "fork": "hardhat node --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
-    "test": "hardhat test --network hardhat",
+    "test": "hardhat test",
+    "test:gas": "REPORT_GAS=true hardhat test",
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.ts",
     "postdeploy": "hardhat run scripts/publish.ts",
