--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@aragon/contract-test-helpers": "^0.0.1",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
@@ -16,6 +17,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "hardhat-deploy": "^0.7.0-beta.46",
     "hardhat-gas-reporter": "^1.0.4",
+    "openzeppelin-solidity": "2.0.1",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "solidity-coverage": "^0.7.16",
@@ -24,6 +26,22 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
+    "@1hive/apps-dandelion-voting": "2.0.0",
+    "@1hive/apps-redemptions": "2.0.1",
+    "@1hive/apps-token-manager": "2.1.0",
+    "@ablack/fundraising-aragon-fundraising": "^1.0.0",
+    "@ablack/fundraising-bancor-formula": "^1.0.0",
+    "@ablack/fundraising-batched-bancor-market-maker": "^1.0.0",
+    "@ablack/fundraising-presale": "^1.0.0",
+    "@aragon/apps-agent": "2.1.0",
+    "@aragon/apps-finance": "^3.0.0",
+    "@aragon/apps-shared-minime": "^1.0.0",
+    "@aragon/apps-token-manager": "^2.1.0",
+    "@aragon/apps-vault": "^4.1.0",
+    "@aragon/apps-voting": "^2.1.0",
+    "@aragon/id": "2.0.3",
+    "@aragon/os": "4.3.0",
+    "@aragon/templates-shared": "1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
