--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@aragon/id": "2.0.3",
     "@aragon/os": "4.3.0",
     "@aragon/templates-shared": "1.0.0",
+    "@commonsswarm/migration-tools": "https://github.com/commonsswarm/migration-tools/tarball/master",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
