--- a/packages/hardhat/tsconfig.json
+++ b/packages/hardhat/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "strict": false,
     "esModuleInterop": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "resolveJsonModule": true
   },
   "include": ["./scripts", "./test", "./deploy", "./helpers"],
   "files": ["./hardhat.config.ts"]
