--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "hardhat": "^2.0.11",
     "hardhat-typechain": "^0.3.5",
     "node-watch": "^0.7.0",
+    "ora": "^5.4.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1",
     "typechain": "^4.0.2"
