--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "scripts": {
     "chain": "hardhat node",
     "fork": "hardhat node --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
-    "test": "hardhat test",
+    "test": "hardhat test --network localhost",
     "test:gas": "REPORT_GAS=true hardhat test",
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.ts",
